# soroban-cost-linter

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit_and_roadmap.md  conversation_id.txt  demo_script.md  github_publish_steps.md  integration.html  introduction.html  launch_checklist.md  opencode.json  print.html  project_log.md  roadmap_mvp.md  searcher-09f2665d.js  searchindex-68a0502c.js  submission.md  submission_checklist.md  toc-d08cb6fd.js  toc.html
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  lint-proposal.yml
.github/scripts/: validate-toolchain-pins.sh
.github/workflows/: docs.yml  lint.yml  pages.yml
cargo-cost-lint/: Cargo.toml  build.rs
cargo-cost-lint/src/: main.rs
docs/: README.md  SUMMARY.md  book.toml  branding.md  cost_rationale.md  integration.md
docs/lints/: README.md  redundant_env_clone.md  soroban_storage_in_loop.md  unnecessary_host_function_call.md
docs/src/: SUMMARY.md  integration.md  introduction.md
docs/src/lints/: README.md  redundant_env_clone.md  soroban_storage_in_loop.md  (+1 more)
lints/: index.html  redundant_env_clone.html  soroban_storage_in_loop.html  unnecessary_host_function_call.html
scripts/: generate_issues.sh
soroban_cost_lints/: Cargo.toml  README.md
soroban_cost_lints/src/: lib.rs
soroban_cost_lints/test_fixtures/real_sdk/: Cargo.toml
soroban_cost_lints/test_fixtures/real_sdk/src/: lib.rs
soroban_cost_lints/ui/: main.rs  main.stderr
templates/: github-action.yml
