[package]
name = "soroban_cost_lints"
version = "0.1.1"
authors = ["authors go here"]
description = "description goes here"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f6d310692116e9a527ce6d0b3526c965d9c5d7b9" }
dylint_linting = "6.0.1"

[dev-dependencies]
dylint = "6.0.1"
dylint_internal = "6.0.1"
dylint_testing = "6.0.1"

[package.metadata.rust-analyzer]
rustc_private = true
